--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "15.2.3",
     "next-themes": "^0.4.6",
     "openai": "^4.93.0",
+    "psql": "^0.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.3",
