--- a/package.json
+++ b/package.json
@@ -4,16 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "npx prisma generate && next build",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "migrate": "npx prisma generate && dotenv -e .env.local -- npx prisma migrate dev"
-  },
-  "prisma": {
-    "schema": "src/db/schema.prisma"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.6.0",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
